When app is closed login is no more required if a valid token is available. Added click handler on logout with logout functionality

--- a/app/src/main/res/menu/navigation_activity.xml
+++ b/app/src/main/res/menu/navigation_activity.xml
@@ -10,9 +10,9 @@
     <item
         android:id="@+id/logout_icon"
         android:icon="@drawable/logout"
-        app:showAsAction="ifRoom|withText"
         android:title="Logout"
-        ></item>
+        android:onClick="onLogoutClick"
+        app:showAsAction="ifRoom|withText"></item>
 
 
 
