--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -23,17 +23,114 @@
         app:menu="@menu/activity_navigation_activity_drawer" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        >
 
         <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
+            android:id="@+id/workplace_dashboard"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:paddingLeft="20dp"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/white"
+            android:textSize="20dp"/>
+        <TextView
+            android:id="@+id/worktime_dashboard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:paddingLeft="50dp"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/white"
+            android:textSize="20dp"/>
+        <TextView
+            android:id="@+id/pause_dashboard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="50dp"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/white"
+            android:textSize="15dp"
+            android:paddingBottom="10dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="75dp"
+            android:layout_height="wrap_content"
+            android:paddingLeft="30dp"
+            android:src="@drawable/plus_circle"
+            android:layout_marginTop="133dp"
+            android:background="@color/colorPrimary"
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true" />
+        <ImageView
+            android:id = "@+id/play_work"
+        android:layout_width="75dp"
+        android:layout_height="wrap_content"
+        android:paddingLeft="30dp"
+        android:src="@drawable/arrow_right_drop_circle"
+
+        android:layout_marginTop="133dp"
+        android:background="@color/colorPrimary"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"/>
+        <ImageView
+            android:layout_width="75dp"
+            android:layout_height="wrap_content"
+            android:paddingLeft="30dp"
+            android:src="@drawable/pause_circle"
+            android:layout_marginTop="133dp"
+            android:background="@color/colorPrimary"
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true"/>
+
+        <ImageView
+            android:layout_width="75dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="133dp"
+            android:adjustViewBounds="true"
+            android:background="@color/colorPrimary"
+            android:paddingLeft="30dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/pencil_circle" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
             android:layout_weight="1"
-            android:text="Hihohello" />
+            android:background="@color/colorPrimary"
+            android:layout_marginTop="133dp"/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/simpleTabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="175dp"
+            app:tabBackground="@color/colorPrimary"
+            app:tabIndicatorColor="@color/white"
+            app:tabSelectedTextColor="@color/white"
+            app:tabTextColor="@color/white" />
+
+        <FrameLayout
+            android:id="@+id/simpleFrameLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </LinearLayout>
 
 </android.support.v4.widget.DrawerLayout>
