--- a/app/src/main/res/layout/activity_workplace.xml
+++ b/app/src/main/res/layout/activity_workplace.xml
@@ -43,6 +43,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         android:paddingTop="25dp"
+        android:visibility="visible"
         app:headerLayout="@layout/nav_header_navigation_activity"
         app:menu="@menu/activity_navigation_activity_drawer" />
 
