Trying to add workplace data to the Dashboard

--- a/app/src/main/res/layout/fragment_fourth.xml
+++ b/app/src/main/res/layout/fragment_fourth.xml
@@ -12,5 +12,36 @@
         android:text="Fouth Fragment"
         android:textSize="40dp"
         android:textStyle="bold" />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".Select_date_calendar"
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/month"
+            android:layout_width="match_parent"
+            android:layout_height="59dp"
+            android:textAlignment="center"
+            android:textSize="35dp" />
+
+        <com.github.sundeepk.compactcalendarview.CompactCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/calendar"
+            android:layout_width="fill_parent"
+            android:layout_height="250dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            app:compactCalendarBackgroundColor="#ffff"
+            app:compactCalendarCurrentDayBackgroundColor="@color/colorAccent2"
+            app:compactCalendarCurrentSelectedDayBackgroundColor="@color/colorAccent"
+            app:compactCalendarMultiEventIndicatorColor="#fff"
+            app:compactCalendarTargetHeight="250dp"
+            app:compactCalendarTextColor="#455A64"
+            app:compactCalendarTextSize="15sp"
+            app:compactCalendarOtherMonthDaysTextColor="#90A4AE"
+            />
+
+    </LinearLayout>
 </RelativeLayout>
