--- a/app/src/main/res/layout/activity_overview__week.xml
+++ b/app/src/main/res/layout/activity_overview__week.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".Overview_Week">
 
+    <TextView
+        android:id="@+id/actual_month"
+        android:layout_width="194dp"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        android:paddingTop="5dp"
+        tools:layout_editor_absoluteX="95dp"
+        tools:layout_editor_absoluteY="6dp"
+        android:textAlignment="center"/>
+
 
     <ListView
         android:id="@+id/workplace_list_view"
